Add PDF content placeholders to Rules, Naming Conventions, and Examples pages to streamline copy/paste from source PDF

--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -6,6 +6,8 @@ import TOCInline from '@theme/TOCInline';
 
 <TOCInline toc={toc} minHeadingLevel={2} maxHeadingLevel={3} />
 
+> TODO: Paste examples and queries from the PDF here. Keep code blocks concise and link to relevant Entities.
+
 ## Query basics
 
 Place example queries here covering filtering, sorting, and pagination.
