--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -2,15 +2,13 @@
 title: Examples & Queries
 ---
 
-
-
 CIEN’S API
-Overview
+## Overview
 What is the Cien.ai API?
 The Cien API allows developers to access the underlying data from Cien’s TrueAI platform, built to enable sales and marketing
 technology applications and analytics in
 completely new ways.
-The TrueAI Platform
+## The TrueAI Platform
 Cien’s TrueAI platform enhances CRM data and
 provides transparency on the underpinnings and
 accuracy of its calculations. The API is able to
@@ -27,13 +25,11 @@ Snow fl ake & Spark are included.
 Upon request, there is a reference implementation on how Cien’s API can be used in
 the form of Cien’s TrueAI GTM Suite created in Power BI for . This can help you get
 started with your advanced GTM analytics project.
-Support
+## Support
 If you have any questions, please reach out to our technical developer support:
 api@cien.ai.
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 2
-
-
-API EXAMPLES
+## API EXAMPLES
 To get you started and familiarize yourself with the Cien API, and the power of the TrueAI platform, we have created the
 following API examples written in PostgresSQL. These examples cover di ff erent aspects of the platform such as data cleaning
 (ADE), rep performance (CI) and deal analysis (DI). By running through the examples on your dataset you will both get a quick
@@ -43,11 +39,9 @@ you can simply change a grouping or condition to answer the speci fi c question 
 As always, we are eager for your feedback. If you have suggestions for other examples or need help changing a question, feel
 free to contact our API support team: api@cien.ai.
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 3
-
-
 ^ Top
-Automatic Data Enhancement (ADE)
-Transparency on the Data Cleanup Process
+## Automatic Data Enhancement (ADE)
+## Transparency on the Data Cleanup Process
 Before you start using the new derived entities it makes sense to understand the quality of the underlying data, and how it has
 been enhanced by the TrueAI platform. The following examples illustrate some of the ways in how this can be done.
 ADE #1: Lead Duplication
@@ -57,11 +51,9 @@ ADE #4: Sales Process Steps in a Year Summary
 ADE #5: CRM Activity Compliance by Group & Role
 ADE #6: AI Prediction Quality
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 4
-
-
 ^ Top
 ADE #1: Lead Duplication (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Duplicate leads cause multiple challenges; for example, reps are not sure if they have properly followed up on an account,
 and analysis of lead conversion gets very complicated.
 Common Challenges and How to Accomplish with the Cien API
@@ -73,9 +65,9 @@ Multiple leads and accounts can often make prospecting analysis hard. To solve t
 created a derived entity called hat_leads (The name comes from the fact that a “logical lead” can wear di ff erent “hats”; as
 an account, one lead or multiple leads). If you want to analyze lead-related data, we recommend that you use that entity. In
 this case we are using the lead entity to illustrate the issue in your database.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 u.trueai_group, u.trueai_user_role_dept, -- group fields
 Count(*) as lead_count, -- total leads
 Count(trueai_lead_dupe_id) as dupe_records, -- total duplicated records
@@ -91,8 +83,8 @@ LEFT JOIN users AS u -- left join to users to get user info
 ON l.trueai_creator_id = u._sys_doc_id -- use creator id to determine who created the dupe record
 GROUP BY u.trueai_group, trueai_user_role_dept -- group fields (group & dept)
 ORDER BY dupe_records DESC; -- sort by the most dupes
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case there is not a lot of duplication of actual leads, but many leads belong to the same company, and would be
 consolidated in the hat_leads entity.
 trueai_group trueai_user_role_level lead_count dupe_records unique_dupe_records dupe_ratio master_records company_dupe_records company_dupe_ratio
@@ -103,10 +95,8 @@ SMB SALES 14 0 0 0.00% 14 4 29%
 ND SALES 736 0 0 0.00% 736 93 13%
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 5
-
-
 ADE #2: Lead & Account Completeness
-Purpose of Analysis
+## Purpose of Analysis
 Incomplete data is one of the most common data quality problems, which causes issues both for reps who need to spend
 time looking for contact info, and for any analysis that relies on complete data such as lead source or location.
 Common Challenges and How to Accomplish with the Cien API
@@ -115,9 +105,9 @@ CRM entities ( leads , accounts , contacts & opps ) has a crm_completeness fi el
 between 0 (no meaningful data) to 1 (all needed data is populated). The score is broken down into subcomponents (contact,
 geo, location & marketing) to see exactly where problems are located. The platform then uses internal and external lookups
 to populate the corresponding TrueAI fi eld, and calculates the improved score.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 AE.entity, -- get the entity since it is a union
 u.trueai_user_role_dept as creator_dept, -- which dept created the record
 Count(*) as record_count, -- count
@@ -129,11 +119,11 @@ AVG(AE.crm_complt_geo) AS avg_crm_complt_score_geo, -- the location info score
 AVG(AE.crm_complt_marketing) AS avg_crm_completness_score_marketing, -- the marketing info like lead
 source, industry etc
 AVG(AE.trueai_complt) AS avg_trueai_completeness_score -- the enhanced completeness score
-FROM
--- create union of multiple tables (could also add opps & contacts)
+## FROM
+- - create union of multiple tables (could also add opps & contacts)
 (SELECT 'leads' as entity, crm_createdon, trueai_creator_id, crm_complt, crm_complt_contact,
 crm_complt_contact_method, crm_complt_geo,crm_complt_marketing,trueai_complt FROM leads AS L
-UNION
+## UNION
 SELECT 'accounts' as entity, crm_createdon, trueai_creator_id, crm_complt, crm_complt_contact,
 crm_complt_contact_method, crm_complt_geo,crm_complt_marketing,trueai_complt FROM accounts AS A
 )
@@ -144,8 +134,8 @@ field)
 WHERE AE.crm_createdon &gt; U._sys_asof -90 -- get in the last 90 days since last data refresh
 GROUP BY AE.entity, U.trueai_user_role_dept -- group by entity and dept
 ORDER BY 1,2; -- sort entities together
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case the avg. completeness scores are reasonable, with the biggest issue being that a lot of accounts records added
 by the OPS team are missing emails and phone numbers.
 entity creator_d
@@ -169,16 +159,12 @@ accounts ND 53 0.50 1.00 0.43 0.82 0.55 0.56
 accounts OPS 1,124 0.34 1.00 0.06 0.97 0.66 0.34
 accounts OTHER 10 0.73 1.00 0.75 0.90 0.63 0.77
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 6
-
-
 accounts SALES 537 0.49 1.00 0.44 0.76 0.53 0.54
 leads MKT 1,096 0.38 0.93 0.60 0.25 0.48 0.41
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 7
-
-
 ADE #3: Consistency & Con fi dence of Lead Source Consolidation (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 As data is added over multiple years, de fi nitions that originally were consistent and clear tend to become more inconsistent.
 This makes any analysis very di ffi cult, since it’s relying on clean categories.
 Common Challenges and How to Accomplish with the Cien API
@@ -191,7 +177,7 @@ Typically, these models are very good at taking hundreds of di ff erent entries 
 number of categories, which can then be used for analysis and AI model features. As this standardization occurs, the model
 reports a con fi dence value for each entry. It can be useful to look at those con fi dence values to see if there were any values
 that the model struggled with.
--------------------
+- ------------------
 Example SQL
 SELECT -- just get the 10 most common entries
 crm_leadsource, -- what's currently in the db
@@ -200,13 +186,13 @@ trueai_leadsource, -- the standardized lead source
 avg(trueai_leadsource_conf) as trueai_leadsource_conf -- the avg. confidence. If confidence is too low, it
 will mark the record as ND.
 FROM leads L -- pull from leads, but the same info is in opps, accounts & contacts
-WHERE
+## WHERE
 crm_leadsource is not null -- exclude records that are blank (they may still be populated through lookups,
 GROUP BY crm_leadsource, trueai_leadsource -- group fields
 Order by count desc -- sort by most common instances in the db
 LIMIT 10;
--------------------
-Sample Result
+- ------------------
+## Sample Result
 The con fi dence scores are high except for the fi rst one, but, nevertheless, it appears to use the right category. If you
 encounter a misclassi fi ed category, please send a note to api@cien.ai along with the suggested correct category. If the
 consolidation is not appropriate for your needs (e.g., you need to keep track of di ff erent list providers and compare them
@@ -218,20 +204,16 @@ Internally Sourced 17,486 Rep Lead Gen 1.00000
 Purchased List 4,882 List Upload 1.00000
 Website Form 1,273 Website 0.99915
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 8
-
-
 ZoomInfo Prospecting 594 List Upload 0.99972
-Paid Social 447 Digital Ads 0.99999
+## Paid Social 447 Digital Ads 0.99999
 Tradeshow 415 Event/Tradeshow 1.00000
 Organic Search 172 SEO 0.99999
-Sales Generated 172 Rep Lead Gen 1.00000
+### Sales Generated 172 Rep Lead Gen 1.00000
 Website Referral 151 Website 1.00000
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 9
-
-
 ADE #4: Sales Process Steps in a Year Summary (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 The key to improve sales performance is to be able to isolate where in the sales process there are ine ffi ciencies. The TrueAI
 platform makes this very easy.
 Common Challenges and How to Accomplish with the Cien API
@@ -246,9 +228,9 @@ step is not considered (i.e., we don’t look at whether the step is assigned to
 overall, over-, and underperformance of a step compared to peers can help you understand a rep’s true performance on a
 speci fi c sales task; for example in prospecting, which tends to be strongly correlated with the ability to do customer
 discovery well.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 SH.step_id, -- the logical number of the step
 SH.step_name, -- the name of the step
 COUNT(SH._sys_doc_id) as steps_completed, -- how many were attempted and completed in the period
@@ -271,13 +253,11 @@ WHERE date_part('year', SH._sys_filt_end_date) = date_part('year', SH._sys_asof)
 year of data (date_part 'year' in other SQL dialects)
 GROUP BY SH.step_id, SH.step_name -- group by the named steps
 ORDER BY 1; -- sort by the logical order of the steps
--------------------
-Sample Result
+- ------------------
+## Sample Result
 There are 6 steps in the standardized sales process. The new logo success rate is slightly higher than the predicted rate,
 whereas the upselling win rate is slightly lower. The value intelligence value creation values add up to slightly more than total
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 10
-
-
 sale, to account for the repeat value of new accounts. As in almost all organizations, the e ff ort of selling an existing account is
 lower than in a new account.
 step_
@@ -299,10 +279,8 @@ won_amount value_created
 6 Upselling 3,284 2,513 66.1% 69.6% 102 165 $275,136,503 $252,658,162
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 11
-
-
 ADE #5: CRM Activity Compliance by Group & Role (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Non-compliance of the CRM tools is a common problem. Companies invest in tools to automatically capture activities etc. It
 is important to understand if those tools are being used e ffi ciently. Once you know what activities are being missed, you can
 use this information to estimate e ff ort spent per account and rep.
@@ -311,9 +289,9 @@ Using raw activity data, it is very di ffi cult to determine if a lot of it is m
 of their activities, and use those to estimate the amount of time spent per sales step. If a rep in general logs the same
 amount of activities, they have a high level of compliance. If their logged activities add up to much less, their compliance is
 low. As with most TrueAI attributes, the con fi dence values are very useful to understand the quality of the prediction.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 U.trueai_group, -- the name of the group
 count(DISTINCT uh._sys_user_id) as rep_count, -- total number of reps in the period
 avg(uh.ci_act_capt_lvl) as avg_act_capture_level, -- what % of activities do we estimate are actually
@@ -321,7 +299,7 @@ logged
 avg(uh.ci_act_capt_lvl_conf) as avg_act_capture_level_confidence, -- what is the confidence in this
 assessment?
 COUNT(DISTINCT CASE WHEN U.trueai_user_role = 'Account Executive' THEN uh._sys_user_id END) as ae_count,
--- how many of the reps are AEs?
+- - how many of the reps are AEs?
 AVG( CASE WHEN U.trueai_user_role = 'Account Executive' THEN uh.ci_act_capt_lvl END) as
 avg_ae_act_capture_level, -- what do they log?
 COUNT(DISTINCT CASE WHEN U.trueai_user_role = 'Sales Development Rep' THEN uh._sys_user_id END) as
@@ -339,8 +317,8 @@ AND UH._sys_filt_end_date &gt; U._sys_asof - 90 -- look at the last 90 days
 AND U.trueai_termination_date is null -- do not include reps that were terminated
 GROUP BY U.trueai_group -- breakdown by group (ND is the default group)
 ORDER BY 1; -- sort the group
--------------------
-Sample Result
+- ------------------
+## Sample Result
 There are 2 groups plus the default ND group. The South group consisting of just AEs are logging their data really well. The
 North group’s Account Managers are not logging at the same level as their colleagues.
 trueai_group rep_count avg_act_capture_level avg_act_capture_
@@ -354,10 +332,8 @@ ND 3 0% 0 0 0
 North 12 70% 78% 4 63% 6 53% 2 45%
 South 7 88% 89% 7 88% 0 0
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 12
-
-
 ADE #6: AI Prediction Quality (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 As Yogi Berra said: “Predictions are hard. Especially about the future.” The Cien platform attempts to predict every sales step
 and many other things on an ongoing basis. To avoid model drift and declining prediction quality, as new data comes in, the
 prediction models are retrained and automatically updated online. Those quality scores are available to API developers.
@@ -366,9 +342,9 @@ Most lead scoring tools provide very little transparency into the actual quality
 looking at the companies_history entity you can get the latest quality scores on multiple quality metrics such as r 2
 (correlation of coe ffi cient) and AUC (area under curve), both from live sampling of actual outcomes and scores post-training.
 If you are concerned with the quality of a speci fi c model, please contact api@cien.ai.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 CH._sys_processed_asof, -- date of processing
 CH.di_pred_prospecting_r2, -- the prospecting r2 score measured on performed predictions
 CH.di_pred_prospecting_auc, -- the AUC score measured on performed predictions
@@ -380,8 +356,8 @@ FROM companies_history CH -- the company history entity contains company specfic
 related to a specific processing cycle
 ORDER BY CH._sys_processed_asof DESC -- sort by most recent
 LIMIT 5; -- just take the top 5 results
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, the two models to determine prospecting and new logo selling are performing well. The r 2 and AUC scores are
 both calculated based on the latest outcomes so they tend to fl uctuate a little for each processing cycle. The post-training
 validation score is only updated once a month when new data is applied into the training set, unless a manual re-training
@@ -399,9 +375,7 @@ n_score
 6/2/2022 0.830 0.890 0.877 0.970 0.840 0.863
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 13
-
-
-Deal Intelligence (DI) - Revenue & Buyer Journey Insights
+### Deal Intelligence (DI) - Revenue & Buyer Journey Insights
 Being able to isolate speci fi c steps in the sales process, and understand the customer factors a ff ecting outcomes is key to
 improving outcomes. The TrueAI platform makes that possible with the ssr and ssr_history entities.
 DI #1: Historical Revenue
@@ -411,10 +385,8 @@ DI #4: Pipeline Analysis by Creator Group & Role
 DI #5: Win/Loss Analysis of New Logo Sales
 DI #6: Revenue Concentration Analysis
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 14
-
-
 DI #1: Historical Revenue (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Knowing past years’ sales numbers may seem like the most basic analysis you can do of a GTM team, but as always, there
 are things that commonly skews the data and insights, leading to the wrong conclusions.
 Common Challenges and How to Accomplish with the Cien API
@@ -424,9 +396,9 @@ usually fi nd incorrect and inconsistently tagged opps. It’s better if you als
 (de-duplicated) account. Other challenges may be opps with amounts in di ff erent currencies making aggregates di ffi cult.
 An easier way to get this information, is to use the ssr_history table, where the data has been normalized and it is easy
 to do sub-category summarization by year, type of sales team, role etc.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 date_part('year', SH._sys_filt_end_date) as year, -- which year?
 SUM(SH.opp_won_amt) as won_amount, -- total booked revenue
 (SELECT CH.company_currency FROM companies_history CH ORDER BY _sys_asof DESC LIMIT 1) as currency, --
@@ -447,8 +419,8 @@ AND SH.step_success = 'true' -- we only care about deals that were won
 GROUP BY date_part('year', SH._sys_filt_end_date) -- group by year
 ORDER BY 1 DESC -- sort most recent year first
 LIMIT 5; -- go back 5 years
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, the company experienced stagnating growth between 2018 – 2020. By focusing on larger deal sizes, and better
 prospecting, growth returned in 2021. Provided that churn is low, this should allow for rapid revenue growth going
 forward, since the new logo revenue compounds as those customers buy more.
@@ -460,10 +432,8 @@ year won_amount currency won_deals avg_deal_size new_logo_amount
 2017 $ 11,313,692 USD 382 $29,617 $ 8,991,992
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 15
-
-
 DI #2: Churn Analysis (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Most B2B companies rely on repeat purchases by their clients, even if they do not have an explicit subscription model.
 Failing to sell to a lot of those clients again is usually considered one of the most severe GTM problems; therefore, the root
 causes must be investigated thoroughly since they can be attributed to product, customer segment, support practice,
@@ -478,7 +448,7 @@ Cien determines the trueai_first_purchase and trueai_churned_on values for accou
 when the fi rst deal was won, and if there are subsequent deals within a year of that point. Please note that this analysis will
 only be valid if renewals are logged as opps in the CRM. If not, additional data from an ERP/Billing system must be
 supplied.
--------------------
+- ------------------
 Example SQL
 SELECT -- just the last 5 years
 Year,
@@ -509,13 +479,11 @@ SELECT 2017 as year
 ) as Y -- create a pseudo year table to cross reference against
 WHERE (S.trueai_account_is_master = 'true' or S.trueai_account_is_master IS NULL) -- remove dupes
 GROUP BY Y.year -- group by year
-ORDER BY 1 DESC
+## ORDER BY 1 DESC
 LIMIT 5; -- most recent data
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 16
-
-
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, account churn was not a problem during 2018-2020, but doubled in 2021, resulting in a new decrease of active
 customers that year.
 year boy_customers new_customers churned_customers net_new_customers eoy_customers
@@ -526,10 +494,8 @@ year boy_customers new_customers churned_customers net_new_customers eoy_custome
 2017 421 143 13 130 708
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 17
-
-
 DI #3: Pipeline Creation by Sale Type & Quality (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 When surveying senior sales executives about their priorities, creating a bigger and better pipeline is almost always among
 their top 3 objectives. However, it is important to measure pipeline not just in deals and pipeline amount, but also in
 quality. It is often easy for reps to create low-quality pipeline by simply entering deals that they hope will close, doing so
@@ -544,9 +510,9 @@ to predict those outcomes. Please see the ADE prediction accuracy example above 
 predictions over time of your data.
 As with most deal analysis, we use the ssr_history entity instead of the CRM opps table, but here we are looking at the
 Prospecting (for new logo selling) and Post-Sale Support (for upselling) steps by fi ltering by step_name .
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 CAST(date_part('year', SH._sys_filt_end_date) as VARCHAR) || '-0' ||
 CAST(date_part('quarter',SH._sys_filt_end_date) as VARCHAR) as year_qtr, -- create a quarter value
 SUM(SH.opp_pipeline_amt) as total_pipeline_created, -- the pipeline created in the quarter
@@ -558,13 +524,13 @@ SUM(CASE WHEN SH.step_name = 'Prospecting' THEN SH.opp_pipeline_amt END) as new_
 new logo pipeline
 AVG(CASE WHEN SH.step_name = 'Prospecting' THEN SH.step_next_success_prob END) as
 new_logo_predicted_opp_win_rate, -- the avg. predicted win rate for new logo only
---SUM(CASE WHEN SH.step_name = 'Prospecting' THEN SH.step_next_success_prob * SH.opp_pipeline_amt END )
+- -SUM(CASE WHEN SH.step_name = 'Prospecting' THEN SH.step_next_success_prob * SH.opp_pipeline_amt END )
 as _predicted_opp_win_amount, -- win rate times amount for new logo pipeline
 SUM(CASE WHEN SH.step_name = 'Post Sales Support' THEN SH.opp_pipeline_amt END) as upselling_pipeline,
--- just upselling pipeline
+- - just upselling pipeline
 AVG(CASE WHEN SH.step_name = 'Post Sales Support' THEN SH.step_next_success_prob END) as
 upselling_predicted_opp_win_rate -- the avg. predicted win rate for upselling only
---SUM(CASE WHEN SH.step_name = 'Post Sales Support' THEN SH.step_next_success_prob * SH.opp_pipeline_amt
+- -SUM(CASE WHEN SH.step_name = 'Post Sales Support' THEN SH.step_next_success_prob * SH.opp_pipeline_amt
 END ) as upselling_predicted_opp_win_amount -- win rate times amount for upselling pipeline
 FROM ssr AS S
 INNER JOIN ssr_history AS SH
@@ -581,10 +547,8 @@ GROUP BY date_part('year', SH._sys_filt_end_date), date_part('quarter', SH._sys_
 by quarter
 ORDER BY 1 DESC; -- order by year and quarter most recent
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 18
-
-
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, pipeline quantity has increased while pipeline quality has remained fairly steady. This is a good outcome, since
 it is easy to sacri fi ce proper quali fi cation when trying to create a bigger pipeline. Worth noting, as in most companies, the
 probability of a win from an upselling opp is signi fi cantly higher (here almost 3X).
@@ -606,10 +570,8 @@ opp_win_rate
 2020-01 $115,796,755 47% $57,469,296 $14,458,985 19% $101,337,770 55%
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 19
-
-
 DI #4: Pipeline Analysis by Creator Group & Role (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 While creating pipeline is top-of-mind for GTM leadership, there are often doubts whether speci fi c groups and/or roles are
 contributing to the overall success of the sales team.
 Common Challenges and How to Accomplish with the Cien API
@@ -622,9 +584,9 @@ Cien makes that analysis easy using the ssr_history and users entities. We are a
 step_next_success_prob fi eld, which contains the success prediction of the subsequent step. The
 step_success_prob predicts the probability of success in the current step. I.e., in this example the probability of a
 conversion into an opportunity.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 U.trueai_group, -- the sales group
 SUM(SH.opp_pipeline_amt) as total_pipeline_created, -- the pipeline created during the period
 AVG(SH.step_next_success_prob) as predicted_opp_win_rate, -- the avg. predicted win rate of that
@@ -652,13 +614,11 @@ determine what will happen in the next step (selling)
 AND U.trueai_user_role_function in ('SDR','AE') -- let's exclude other roles
 GROUP BY U.trueai_group -- group by the sales team
 ORDER BY 1; -- order by group
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, pipeline quality varies across groups with the LATAM group struggling to create high-quality new logo pipeline.
 Worth noting is that the SDR generated pipeline is signi fi cantly worse than the AE pipeline for the Enterprise group.
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 20
-
-
 trueai_group total_pipeline_created predicted_opp_
 win_rate
 predicted_opp_
@@ -671,10 +631,8 @@ Enterprise $18,275,038 18% $4,795,024 $ 3,964,363 27% $14,310,675 17%
 Mid Market $18,932,554 21% $3,734,812 $14,747,436 22% $4,185,118 17%
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 21
-
-
 DI #5: Win/Loss Analysis of New Logo Sales (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Everyone wants to understand the secret to winning deals. There are tons of “best practices” out there, but what is really
 interesting is what factors have made reps win deals in your GTM organization. Here is a simple analysis that highlights
 what tends to be the factors with the biggest impact.
@@ -691,9 +649,9 @@ prep time.
 Cien makes that type of analysis available with a minimum of e ff ort using the ssr_history entity grouping by the
 step_outcome fi eld. For simplicity, this analysis does not include stakeholder roles and levels, (i.e., which dept. and
 seniority a contact has) – this information can sometimes have a big impact as well and is also available in the same entity.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 SH.step_outcome, -- outcome, in this case won or lost
 AVG(SH.step_success_prob) as avg_success_prediction, -- what was the avg prediction for each outcome
 COUNT(SH._sys_doc_id) AS deal_count, -- count of deals
@@ -713,13 +671,11 @@ year
 AND SH.step_outcome IS NOT NULL -- exclude deals that are not yet closed
 GROUP by SH.step_outcome -- group by outcome - in this case won or lost
 ORDER BY 1 DESC; -- sort by outcome
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, the analysis shows a very common pattern, that more engagement results in a won deal (i.e., the customer is
 not going “radio-silent”, and not responding to the rep’s outreach). Factors such as number of buyer contacts involved does
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 22
-
-
 not seem to have any impact on outcome. Won deals are wrapped up in around 4 months, but deals that end up being
 lost, run much longer. Not surprisingly, there is a big di ff erence (2X) in the initial prediction of the deal being won.
 It is important to recall that this prediction is done prior to any actual sales activity has started on the deal – it does not
@@ -731,10 +687,8 @@ Closed Won 27% 206 111 148 98 66% 3.5
 Closed Lost 13% 2,036 410 42 16 39% 3.5
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 23
-
-
 DI #6: Revenue Concentration Analysis (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Having too much revenue concentrated in a few large clients poses a great risk for a GTM organization. At the same time,
 many revenue leaders cite the Pareto principle (80% of your revenue comes from 20% of your clients) as almost inevitable.
 Common Challenges and How to Accomplish with the Cien API
@@ -743,9 +697,9 @@ multiple purchases within a year needs to be consolidated.
 The tricky part of this analysis is to use running totals based on di ff erent sort orders. By using the PARTITION and OVER
 keywords in SQL, it is possible to get the number of the largest account that represents 80% of total annual revenue and
 compare that to the total number of accounts that bought in the year.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 date_part('year', _sys_filt_end_date) as year, -- get the year
 SUM(opp_won_amt) as sum_sales, -- get the sum of sales
 COUNT(DISTINCT _sys_ssr_id) as customer_count, -- get # of buying customers
@@ -786,11 +740,9 @@ GROUP BY date_part('year', SH._sys_filt_end_date), SH._sys_ssr_id -- group by ac
 ) as SH_w_ranking -- second agg w/ ranking agg
 GROUP BY date_part('year', _sys_filt_end_date)
 ORDER BY date_part('year', _sys_filt_end_date) DESC;
--------------------
+- ------------------
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 24
-
-
-Sample Result
+## Sample Result
 In this case, the revenue concentration has increased over the last 5 years, despite much higher revenue. This is due to
 the largest clients now being 10X bigger than 5 years ago; a great accomplishment of course, but it does also increase the
 revenue risk.
@@ -805,18 +757,14 @@ omer_percentage
 2017 $72,672,920 311 $221,135 $1,961,263 126 41%
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 25
-
-
 Value Intelligence (VI) - Fairness & Value Creation in the GTM Org
 If you want to understand rep performance, you must look at what value each rep received, as new leads, existing accounts, or
 new opportunities from an SDR team. Once you do, you will often fi nd that top performance is correlated with having access to
 high potential accounts and a great pipeline, created by other reps.
 VI #1: Lead Generation by Quarter broken down by Creator Dept and Quality
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 26
-
-
 VI #1: Lead Generation by Quarter broken down by Creator Dept and Quality (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 To build new logo pipeline, you need to generate good new leads (or accounts if you use an Account Based approach). Those
 can be either inbound or outbound leads in di ff erent industries and locations. The reps should then follow up and attempt to
 convert those leads into opportunities (some companies call this Sales Quali fi ed Leads – SQL).
@@ -831,7 +779,7 @@ recti fi ed prior to analysis.
 Unlike most other analyses, we are using the hat_leads entity here instead of the ssr_history, since it combines the fi rst three
 standardized steps in the sales process (lead gen, untouched and prospecting), hence making the queries easier to understand.
 We then join with the users entity to understand who created the lead so we can compare outcomes.
--------------------
+- ------------------
 Example SQL
 CAST(date_part('year', HL._sys_filt_start_date) as VARCHAR) || '-0' || CAST(date_part('quarter',
 HL._sys_filt_start_date) as varchar) as year_qtr, -- the year and quarter
@@ -865,11 +813,9 @@ current partial year
 GROUP BY date_part('year', HL._sys_filt_start_date), date_part('quarter', HL._sys_filt_start_date) -- group
 by year and quarter
 ORDER BY 1 DESC; -- most recent first
--------------------
+- ------------------
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 27
-
-
-Sample Result
+## Sample Result
 In this case, the absolute number of leads generated per quarter has remained fairly steady. Around 25% of those are actively
 prospected by the sales team. The team is picking leads that are more likely to be converted. Around 5% of the leads are
 generated by the sales team themselves. The value created follows the multiplication of the expected probability of conversion
@@ -899,20 +845,16 @@ alue
 2021-02 472,931 94,659 25,901 1.3% 4.7% 396,213 72,037 0.7% 3.6% $19,138,033
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 28
-
-
-Coaching Intelligence (CI) - Rep Skills & Behavior Analysis
+### Coaching Intelligence (CI) - Rep Skills & Behavior Analysis
 Every GTM organization wants to develop their reps, but if you don’t understand their current behavior and skills, it is hard to
 provide meaningful individualized coaching, and next to impossible to evaluate the e ff ectiveness of di ff erent training, available
 tools, etc. Cien changes that. Now, previously unavailable data points are at your fi ngertips.
 CI #1: Rep Hiring & Termination Analysis
 CI #2: Time to Lead
-CI #3: Quarterly Rep Performance Analysis
+## CI #3: Quarterly Rep Performance Analysis
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 29
-
-
 CI #1: Rep Hiring & Termination Analysis (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 Just like you need to understand gained and lost accounts, you need to understand how the size of the sales team has
 changed over time and the makeup of the roles of the team.
 Common Challenges and How to Accomplish with the Cien API
@@ -929,9 +871,9 @@ dataset.
 The key fi elds are the trueai_user_role (a set of 15 speci fi c CRM user roles), trueai_user_role_function
 (consolidated into higher level functions such as AE, AM, SDR etc.) and trueai_termination_date (which looks for
 multiple signals that a user is terminated – e.g. no logins or no activities in addition to the active fl ag).
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 Y.year as year, -- the year
 COUNT(DISTINCT CASE WHEN date_part('year', U.trueai_hire_date) &lt; Y.year AND date_part('year',
 COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt;= Y.Year THEN U._sys_doc_id END) as
@@ -961,8 +903,6 @@ COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'MGMT' AND date_part('yea
 THEN U._sys_doc_id END) as mgmt_count_eoy,-- managers at end of year (use user_role_function field
 instead of user_role to simplify query)
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 30
-
-
 COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'OTHER' AND date_part('year', U.trueai_hire_date)
 &lt;= Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year
 THEN U._sys_doc_id END) as other_count_eoy,-- others (e.g. sales engineers) at end of year (use
@@ -983,8 +923,8 @@ SELECT 2017 as year
 WHERE U.trueai_user_role_dept = 'SALES' -- only the sales users
 GROUP BY Y.year -- group by year
 ORDER BY 1 DESC; -- most recent data
--------------------
-Sample Result
+- ------------------
+## Sample Result
 In this case, the team has grown consistently for the last 5 years, with the biggest increase in account management,
 re fl ecting the larger # of supported accounts. Rep to manager ratio (including supporting roles like Sales Engineers) has
 decreased to 4.7 from around 3.5 a few years ago.
@@ -1015,10 +955,8 @@ eoy
 2017 766 459 -230 995 249 175 78 295 198 3.5
 ^ Top
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 31
-
-
 CI #2: Time to Lead (V.1.2)
-Purpose of Analysis
+## Purpose of Analysis
 It is well known that there is a bene fi t to responding quickly to inbound leads. However, there may be doubts about how
 critical response time is in a speci fi c organization and how good the reps are on average to respond to inbound leads. This
 analysis makes it easy to answer those questions.
@@ -1029,9 +967,9 @@ account, skewing the results downwards. We recommend that you use the derived ha
 that problem. Secondly, it’s important to understand which of the leads are inbound. Cien makes that easy by creating a
 trueai_leadsource_is_inbound fi eld. And lastly, you need to look at activity and conversion patterns to determine
 when a lead was actually touched. The trueai_first_touch fi eld gives you that information.
--------------------
+- ------------------
 Example SQL
-SELECT
+## SELECT
 CASE WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 7 THEN 'Over a week'
 WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 3 THEN 'Over three days'
 WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 1 THEN 'Over one day'
@@ -1051,7 +989,7 @@ last 90 days
 AND HL.trueai_leadsource_is_inbound = 'true' -- we're only interested in inbound leads coming to us
 AND CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &lt; 21 -- there are leads that are not
 touched for over 3 weeks - let's exclude those
-GROUP BY
+## GROUP BY
 CASE WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 7 THEN 'Over a week'
 WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 3 THEN 'Over three days'
 WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 1 THEN 'Over one day'
@@ -1059,16 +997,14 @@ WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 6 THE
 WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 1 THEN 'Over 1 hour'
 ELSE 'Within Minutes' END -- great a derived category field and group by it
 ORDER BY avg_hours DESC; -- sort by slowest response first
--------------------
-Sample Result
+- ------------------
+## Sample Result
 There is a dramatic di ff erence in outcome between responding immediately and later. The pred_conversion_rate
 allows you to understand if the reps are already selecting the best leads for fast follow up (that is the case here). In general,
 this sales organization is fairly good at responding quickly to leads.
 time_to_touch_bucket avg_hours touched_leads pred_conversion_rate converted actual_conversion_rate
 Over a week 855.9 85 10% 7 8%
 Copyright © 2023 - Cien, Inc. - All Rights Reserved. 32
-
-
 Over three days 120.1 71 15% 9 13%
 Over one day 47.8 43 21% 11 26%
 Over 6 hours 17.1 45 17% 6 13%
