docs(ci): fix front matter; use ci-001-ra id; update examples links

--- a/docs/ci/ci-001.md
+++ b/docs/ci/ci-001.md
@@ -1,45 +1,11 @@
----
-id: ci-001
-title: CI-001
+id: ci-001-legacy
+title: CI-001 (legacy placeholder)
 version: v1.0
 category: "Analytics & Data Examples"
-sidebar_label: ci-001
+sidebar_label: ci-001-legacy
+draft: true
 ---
 
-## Description
+This placeholder page has been superseded by CI-001 Rep Activity Consistency.
 
-### Purpose of Analysis
-
-State the Coaching Intelligence goal (e.g., behavior/skill signal, training impact) and the relevant entities or events.
-
----
-
-## Query
-
-### Query Intent
-
-Clarify which behaviors/skills are being proxied, the aggregation window, and the outcome metrics.
-
-```sql
--- Replace this placeholder with the final SQL
-SELECT
-	rep,
-	behavior_signal,
-	AVG(score) AS avg_score
-FROM ci_source
-GROUP BY rep, behavior_signal
-ORDER BY avg_score DESC;
-```
-
-### Sample Output
-
-| rep | behavior_signal | avg_score |
-| --- | --- | ---:|
-| Alice | DiscoveryDepth | 0.82 |
-| Bob | NextStepClarity | 0.67 |
-
-## How to Interpret the Results
-
-- What high vs low scores suggest.
-- Suggested coaching interventions.
-- Notes on data quality or seasonality.
+See: [CI-001: Rep Activity Consistency](./ci-001)
