fix(di-001): resolve duplicate doc id by renaming placeholder to di-001-placeholder

--- a/docs/di/di-001.md
+++ b/docs/di/di-001.md
@@ -1,47 +1,9 @@
 ---
-id: di-001
-title: DI-001
+id: di-001-placeholder
+title: DI-001 (Placeholder)
 version: v1.0
-category: "Analytics & Data Examples"
-sidebar_label: di-001
+category: Deal Intelligence
+sidebar_label: DI-001 (Placeholder)
 ---
 
-## Description
-
-### Purpose of Analysis
-
-Briefly describe what business question this Deal Intelligence example answers, the entities involved (`ssr`, `ssr_history`, etc.), and why it matters.
-
----
-
-## Query
-
-### Query Intent
-
-Explain how the query aggregates or filters data, what dimensions are used (e.g., team, role, stage), and which outcome metrics are calculated.
-
-```sql
--- Replace this placeholder with the final SQL
-SELECT
-	/* dimensions */
-	dim1,
-	dim2,
-	/* metrics */
-	COUNT(*) AS records
-FROM some_entity
-GROUP BY dim1, dim2
-ORDER BY records DESC;
-```
-
-### Sample Output
-
-| dim1 | dim2 | records |
-| --- | --- | ---:|
-| A | X | 123 |
-| B | Y | 45 |
-
-## How to Interpret the Results
-
-- Bullet 1 describing what a high/low value means.
-- Bullet 2 linking the metric to a decision or next step.
-- Bullet 3 calling out caveats or follow-ups.
+This placeholder has been superseded by the detailed page `di-001-deal-stage-conversion`. Please refer to that page for the finalized query and interpretation.
