docs(vi-001): add Lead Value Distribution and retire placeholder id

--- a/docs/vi/vi-001.md
+++ b/docs/vi/vi-001.md
@@ -1,45 +1,9 @@
 ---
-id: vi-001
-title: VI-001
+id: vi-001-placeholder
+title: VI-001 (Placeholder)
 version: v1.0
-category: "Analytics & Data Examples"
-sidebar_label: vi-001
+category: Value Intelligence
+sidebar_label: VI-001 (Placeholder)
 ---
 
-## Description
-
-### Purpose of Analysis
-
-Summarize the Value Intelligence question addressed (e.g., value allocation fairness, pipeline contribution), key fields, and decision context.
-
----
-
-## Query
-
-### Query Intent
-
-Describe the dimensions (e.g., rep, segment) and the value metrics computed (e.g., new value received, opportunity potential).
-
-```sql
--- Replace this placeholder with the final SQL
-SELECT
-	rep,
-	segment,
-	SUM(value_received) AS total_value
-FROM vi_source
-GROUP BY rep, segment
-ORDER BY total_value DESC;
-```
-
-### Sample Output
-
-| rep | segment | total_value |
-| --- | --- | ---:|
-| Alice | Enterprise | 1,200,000 |
-| Bob | SMB | 450,000 |
-
-## How to Interpret the Results
-
-- Note on fairness or distribution of value across reps/segments.
-- Guidance on how to act on high/low values.
-- Caveats and recommended follow-up analyses.
+This placeholder has been superseded by the detailed page `vi-001-lead-value-distribution`. Please refer to that page for the finalized query and interpretation.
